backend/k8s/test-manifests/authdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - image: docker.io/jumpdaddy/com-hub-auth:1.0.2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          name: auth
          ports:
            - containerPort: 3001
              protocol: TCP
      restartPolicy: Always

---

apiVersion: v1
kind: Service 
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - name: "http"
      port: 3001
      targetPort: 3001
