backend/k8s/test-manifests/datadeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data
  name: data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data
  template:
    metadata:
      labels:
        app: data
    spec:
      containers:
        - image: docker.io/jumpdaddy/com-hub-data:1.0.2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          name: data
          ports:
            - containerPort: 3003
              protocol: TCP
      restartPolicy: Always

---

apiVersion: v1
kind: Service 
metadata:
  name: data
spec:
  selector:
    app: data
  ports:
    - name: "http"
      port: 3003
      targetPort: 3003
