backend/k8s/test-manifests/frontenddeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: docker.io/jumpdaddy/com-hub-frontend:1.0.2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always

---

apiVersion: v1
kind: Service 
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: "http"
      port: 80
      targetPort: 80
