backend/k8s/test-manifests/videodeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: video
  name: video
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video
  template:
    metadata:
      labels:
        app: video
    spec:
      containers:
        - image: docker.io/jumpdaddy/com-hub-video:1.0.1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 500M
            limits:
              cpu: 100m
              memory: 500M
          name: video
          ports:
            - containerPort: 3002
              protocol: TCP
      restartPolicy: Always

---

apiVersion: v1
kind: Service 
metadata:
  name: video
spec:
  selector:
    app: video
  ports:
    - name: "http"
      port: 3002
      targetPort: 3002
