backend/k8s/test-manifests/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: com-hub-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts:
        - com-hub.byte-jumper.de
      secretName: com-hub.byte-jumper.de
  ingressClassName: nginx
  rules:
    - host: com-hub.byte-jumper.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 3001
          - path: /api/videos
            pathType: Prefix
            backend:
              service:
                name: video
                port:
                  number: 3002
          - path: /api/data
            pathType: Prefix
            backend:
              service:
                name: data
                port:
                  number: 3003
